# debt-collector.ai

./: .env.example  .gitignore  Assignment.md  README.md  config.py  justfile  main.py  participant.json  play.ipynb  pyproject.toml
prompts/debt_collection/: __init__.py  prompts.py
workflows/: debt_collection.py
